Table Residents {
    id                      int                 [pk, increment, Not Null]
    nik                     int(16)             [Not Null, unique]
    name                    varchar(100)        [Not Null]
    birth_place             varchar(50)         [Not Null]
    birth_date              date                [Not Null]
    gender                  gender              [Not Null]
    religion                religion            [Not Null]
    citizenship             citizenship         [Not Null]
    education_level         education_level     [Not Null]
    blood_type              blood_type          [Not Null]
    profession_name         varchar(50)         [Not Null]
    goverment_employees     bool                [Not Null]
    id_income_range         int                 [Not Null]
    id_family               int                 [Not Null]
    fm_status               fm_status           [Not Null]
    marital_status          marital_status      [Not Null]
    marriage_date           date                [Null]
    is_archived             bool                [Not Null, Default: false]
    created_at              timestamp           []
    updated_at              timestamp           []
}

Table Family {
    id                      int         [pk, increment, Not Null]
    nkk                     int(16)     [Not Null, unique]
    id_house                int         [Not Null]
    address_street          varchar(50) [Not Null]
    address_rt              int(3)      [Not Null]
    address_rw              int(3)      [Not Null]
    address_id_village      int         [Not Null]
    zip_code                int(5)      [Not Null]
    is_archived             bool        [Not Null, Default: false]
    created_at              timestamp   []
    updated_at              timestamp   []
}

Table House {
    id              int [pk, increment]
    id_house_group  int
    land_area       int
    building_are    int
    domicile_street varchar(50)
    domicile_rt     int(3)
    domicile_rw     int(3)
    zip_code        int(5)
    is_archived     bool
    created_at      timestamp
    updated_at      timestamp
}

Table HouseGroup {
    id int [pk, increment]
    is_archived     bool
    created_at      timestamp
    updated_at      timestamp
}

Table User {
    id                  int                 [pk, increment]
    id_level            int                 [Not Null]
    email               varchar(50)         [Not Null]
    phone_number        int(13)             [Not Null]
    id_resident         int                 [Null]
    is_archived         bool
    created_at          timestamp
    updated_at          timestamp
}

Table Province {
    id              int(2)          [pk, Not Null]
    province_name   varchar(100)    [Not Null]
    created_at      timestamp       [Not Null]
    updated_at      timestamp       [Not Null]
}

Table City {
    id          int(4) [pk]
    id_province int(2)
    city_name   varchar(100)
    created_at  timestamp
    updated_at  timestamp
}

Table District {
    id              int(6) [pk]
    id_city         int(4)
    district_name   varchar(100)
    created_at      timestamp
    updated_at      timestamp
}

Table Village {
    id              int(9) [pk]
    id_district     int(6)
    village_name    varchar(100)
    created_at      timestamp
    updated_at      timestamp
}

Table GeneralLedger {
    id int [pk, increment]
    id_issuer int
    issuer_type enum
    is_archived bool
    created_at timestamp
    updated_at timestamp
}

Table IncomeRange {
    id          int [pk, increment]
    lowerbound  int
    upperbound  int
    is_archived bool
    created_at  timestamp
    updated_at  timestamp
}

Table UserLevel {
    id          int [pk, increment]
    level_name      level
    created_at  timestamp
    updated_at  timestamp
}

Table ContributionTypes {
    id int [pk, increment]
    contribution_name varchar(100)
    description text
    is_archived bool
    created_at timestamp
    updated_at timestamp
}

Table ContributionDetails {
    id int [pk, increment]
    id_contribution int
    id_contribution_type int
    contribution_amount int
    is_archived bool
    created_at timestamp
    updated_at timestamp
}

Table Contributions {
    id int [pk, increment]
    id_recipient int
    id_general_ledger int
    recipient_type recipient_type
    is_archived bool
    created_at timestamp
    updated_at timestamp
}

Table Payments {
    id int [pk, increment]
    id_contribution int
    id_payment_method int
    id_payment_status int
    payment_amount bigint
    description text
    is_archived bool
    created_at timestamp
    updated_at timestamp
}

Table PaymentProves {
    id int [pk, increment]
    id_payment int
    is_archived bool
    created_at timestamp
    updated_at timestamp
}

Table PaymentMethods {
    id int [pk, increment]
    method_name varchar(100)
    description text
    is_archived bool
    created_at timestamp
    updated_at timestamp
}

Table PaymentStatus {
    id int [pk, increment]
    status_name varchar(100)
    description text
    is_archived bool
    created_at timestamp
    updated_at timestamp
}

TableGroup ResidentialInformation {
    Residents
    Family
    House
    HouseGroup
}

TableGroup Auth {
    User
    UserLevel
}

TableGroup Gov {
    Village
    District
    City
    Province
}

TableGroup Contribution {
    Contributions
    ContributionDetails
    ContributionTypes
    Payments
    PaymentMethods
    PaymentStatus
    PaymentProves
    GeneralLedger
}

Enum level {
    Admin
    RW
    RT
} // TODO Turn to table

Enum gender {
    L
    P
}

Enum religion {
    Islam
    Protestan
    Katolik
    Hindu
    Budha
    Khonghucu
} //TODO turn into table

Enum marital_status {
    Belum_Kawin
    Kawin
    Duda_Janda
    Cerai
} //TODO turn into table

Enum citizenship {
    WNI
    WNA
}

Enum education_level {
    tidak_belum_sekolah
    belum_tamat_sd_sederajat
    tamat_sd_sederajat
    sltp_sederajat
    slta_sederajat
    diploma_i_ii
    akademi_diploma_iii_s_muda
    diploma_iv_strata_i
    strata_ii
    strata_iii
} //TODO turn into table

Enum blood_type {
    A
    B
    AB
    O
}

Enum fm_status {
    Kepala_Keluarga
    Istri
    Anak
} //TODO turn into table

Enum recipient_type {
    Family
    House
    HouseGroup
}

//* Resident Infomation
Ref: Residents.id_income_range - IncomeRange.id

Ref: Family.id < Residents.id_family

Ref: House.id < Family.id_house

Ref: HouseGroup.id < House.id_house_group

//* Auth
Ref: User.id_resident - Residents.id

Ref: User.id_level - UserLevel.id

//* Government
Ref: City.id_province > Province.id

Ref: District.id_city > City.id

Ref: Village.id_district > District.id

Ref: Village.id < Family.address_id_village

//* Contribution
Ref: PaymentProves.id_payment > Payments.id

Ref: PaymentStatus.id < Payments.id_payment_status

Ref: PaymentMethods.id < Payments.id_payment_method

Ref: Payments.id_contribution < Contributions.id

Ref: ContributionDetails.id_contribution < Contributions.id

Ref: ContributionDetails.id_contribution_type > ContributionTypes.id

Ref: Contributions.id_general_ledger < GeneralLedger.id

Ref: GeneralLedger.id_issuer > User.id